--- a/tinyERP/tinyERP/MainWindow.xaml
+++ b/tinyERP/tinyERP/MainWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="tinyERP.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:tinyERP"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+﻿<Controls:MetroWindow x:Class="tinyERP.MainWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      Title="MainWindow"
+                      Height="600"
+                      Width="800">
     <Grid>
-        
+        <Button Content="This is a small Buton"></Button>
     </Grid>
-</Window>
+</Controls:MetroWindow>
