--- a/tinyERP/tinyERP/Budget.xaml
+++ b/tinyERP/tinyERP/Budget.xaml
@@ -3,10 +3,43 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="600">
-    <Grid Background="AliceBlue">
-        <Grid.RowDefinitions><RowDefinition></RowDefinition><RowDefinition></RowDefinition></Grid.RowDefinitions>
-        <TextBlock FontSize="40" Margin="10">Budgetverwaltung</TextBlock>
+             d:DesignHeight="600" d:DesignWidth="1000">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <CollectionViewSource x:Key="SortedBudgets" Source="{Binding BudgetViews}">
+    </CollectionViewSource>
+            </ResourceDictionary>
+    </UserControl.Resources>
+    
+    <Grid Background="White">
+        <Grid.ColumnDefinitions><ColumnDefinition></ColumnDefinition><ColumnDefinition></ColumnDefinition></Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Orientation="Vertical">
+            <TextBlock FontSize="40" Margin="10" Height="auto">Budgetverwaltung</TextBlock>
+        </StackPanel>
+        <DockPanel Grid.Column="1" Margin="10">
+            <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
+                    <TextBox Width="200" Height="20"></TextBox>
+                    <Button Style="{DynamicResource MahApps.Metro.Styles.MetroCircleFocusVisual}" Width="50" Height="50" Margin="0,0,130,0">
+                        <iconPacks:PackIconMaterial Kind="Magnify" Width="40" Height="40" />
+                    </Button>
+                    <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50">
+                        <iconPacks:PackIconMaterial Kind="PlusCircle" Width="40" Height="40" />
+                    </Button>
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50">
+                    <iconPacks:PackIconMaterial Kind="MinusCircle" Width="40" Height="40" />
+                </Button>
+            </StackPanel>
+            <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding BudgetViews}" MinWidth="480px" ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Margin="0,0,0,10">
+                <DataGrid.Columns>
+                    <DataGridTextColumn MinWidth="60" Width="*" Header="Datum" Binding="{Binding Date, StringFormat={}{0:dd.MM.yyyy}}"/>
+                    <DataGridTextColumn MinWidth="120" Width="*" Header="Bezeichnung" Binding="{Binding Description}"/>
+                    <DataGridTextColumn MinWidth="100" Width="*" Header="Kategorie" Binding="{Binding Categorie}"/>
+                    <DataGridTextColumn MinWidth="60" Width="*" Header="Betrag" Binding="{Binding Amount}"/>
+                    <DataGridTextColumn MinWidth="100" Width="*" Header="Privatanteil" Binding="{Binding Privatpart}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </DockPanel>
     </Grid>
 </UserControl>
