--- a/tinyERP/tinyERP/MainWindow.xaml
+++ b/tinyERP/tinyERP/MainWindow.xaml
@@ -19,23 +19,23 @@
     </Window.Resources>
     
     <DockPanel>
-        <Grid DockPanel.Dock="Left" Width="120" Background="{StaticResource AccentColorBrush4}">
+        <Grid DockPanel.Dock="Left" Width="120" Background="{StaticResource AccentColorBrush2}">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Button Grid.Row="0" Style="{DynamicResource MetroCircleButtonStyle}" Width="100" Height="100">
+            <Button Grid.Row="0" Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100">
                 <iconPacks:PackIconMaterial Kind="Cash" Width="50" Height="50" />
             </Button>
-            <Button Grid.Row="1" Style="{DynamicResource MetroCircleButtonStyle}" Width="100" Height="100">
+            <Button Grid.Row="1" Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100">
                 <iconPacks:PackIconMaterial Kind="Archive" Width="50" Height="50" />
             </Button>
-            <Button Grid.Row="2" Style="{DynamicResource MetroCircleButtonStyle}" Width="100" Height="100">
+            <Button Grid.Row="2" Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100">
                 <iconPacks:PackIconMaterial Kind="AccountMultiple" Width="50" Height="50" />
             </Button>
-            <Button Grid.Row="3" Style="{DynamicResource MetroCircleButtonStyle}" Width="100" Height="100">
+            <Button Grid.Row="3" Style="{DynamicResource CircleButtonExtend}" Width="100" Height="100">
                 <iconPacks:PackIconFontAwesome Kind="PencilSquareOutline" Width="50" Height="50" />
             </Button>
         </Grid>
