--- a/tinyERP/tinyERP/Resources/Brushes.xaml
+++ b/tinyERP/tinyERP/Resources/Brushes.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="IconBackBrush" Color="{StaticResource BackgroundColorIcon}"/>
+    <SolidColorBrush x:Key="BoarderBrush" Color="{StaticResource BorderColor}"/>
 </ResourceDictionary>
