--- a/tinyERP/tinyERP/Resources/Colors.xaml
+++ b/tinyERP/tinyERP/Resources/Colors.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!--Colors for the MetroTheme, don't rename the keys-->
     <!--ACCENT COLORS-->
     <Color x:Key="HighlightColor">#ad00ad</Color>
-
     <!--80%-->
     <Color x:Key="AccentColor">#00AF00</Color>
     <!--60%-->
@@ -12,5 +12,11 @@
     <Color x:Key="AccentColor3">#44d62c</Color>
     <!--20%-->
     <Color x:Key="AccentColor4">#828f5b</Color>
+    <Color x:Key="IdealForegroundColor">White</Color>
+    <!--End of MetroTheme-->
+    
+    <Color x:Key="BorderColor">Black</Color>
+    
+    
 
 </ResourceDictionary>
