--- a/tinyERP/tinyERP/Resources/CircleButtonExtend.xaml
+++ b/tinyERP/tinyERP/Resources/CircleButtonExtend.xaml
@@ -16,7 +16,7 @@
                                  Opacity="0" />
                         <Ellipse x:Name="ellipse"
                                  Margin="4"
-                                 Stroke="{DynamicResource BoarderBrush}"
+                                 Stroke="{DynamicResource BorderBrush}"
                                  StrokeThickness="{Binding RelativeSource={x:Static RelativeSource.TemplatedParent}, Path=BorderThickness.Left}" />
                         <ContentPresenter x:Name="PART_ContentPresenter"
                                           Margin="{TemplateBinding Padding}"
@@ -56,10 +56,11 @@
                         <Trigger Property="IsMouseOver" Value="False">
                             <Setter TargetName="ellipse" Property="Opacity" Value="0.7" />
                         </Trigger>
+                        <!--
                         <Trigger Property="IsFocused" Value="True">
                             <Setter Property="Background" Value="{DynamicResource AccentColorBrush4}" />
                             <Setter TargetName="ellipse" Property="Opacity" Value="0.3" />
-                        </Trigger>
+                        </Trigger> -->
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
