--- a/tinyERP/tinyERP/Views/OrderView.xaml
+++ b/tinyERP/tinyERP/Views/OrderView.xaml
@@ -5,8 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:tinyERP"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+             d:DesignHeight="600" d:DesignWidth="1000">
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Orientation="Vertical">
+            <TextBlock FontSize="40" Margin="10" Height="auto">Auftragsverwaltung</TextBlock>
+        </StackPanel>
     </Grid>
 </UserControl>
