--- a/tinyERP/tinyERP/Views/AddTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/AddTransactionView.xaml
@@ -1,12 +1,13 @@
-﻿<controls:MetroWindow x:Class="tinyERP.UI.Views.AddTransactionView"
+﻿<controls:MetroWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:viewmodels="clr-namespace:tinyERP.UI.ViewModels" x:Class="tinyERP.UI.Views.AddTransactionView"
         mc:Ignorable="d"
-        Title="Add a new Transaction" Height="320" Width="600" MinWidth="600" MinHeight="320">
+        Title="Neue Buchung erfassen" Height="320" Width="550" MinWidth="550" MinHeight="320">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -17,26 +18,25 @@
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox HorizontalAlignment="Left" Grid.Row="0" Grid.Column="0" Width="200" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung"></TextBox>
-        <TextBox HorizontalAlignment="Left" Grid.Row="1" Grid.Column="0" Width="200" Height="20" controls:TextBoxHelper.Watermark="Betrag"></TextBox>
-        <DatePicker HorizontalAlignment="Left" Grid.Row="2" Grid.Column="0" Width="200" Height="20" Text="Wähle ein Datum"></DatePicker>
-        <TextBox HorizontalAlignment="Left" Grid.Row="3" Grid.ColumnSpan="2" Width="500" Height="40" controls:TextBoxHelper.Watermark="Bemerkungen"></TextBox>
-        <controls:SplitButton HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Width="200" DisplayMemberPath="Title" ItemsSource="{Binding Categories}" VerticalAlignment="Center"></controls:SplitButton>
-        <TextBox HorizontalAlignment="Left" Grid.Row="1" Grid.Column="1" Width="200" Height="20" controls:TextBoxHelper.Watermark="Privatanteil"></TextBox>
+        <TextBox HorizontalAlignment="Left" Grid.Row="0" Grid.Column="0" Width="200" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung"/>
+        <TextBox HorizontalAlignment="Left" Grid.Row="1" Grid.Column="0" Width="200" Height="20" controls:TextBoxHelper.Watermark="Betrag"/>
+        <DatePicker HorizontalAlignment="Left" Grid.Row="2" Grid.Column="0" Width="200" Height="20" Text="Wähle ein Datum"/>
+        <TextBox HorizontalAlignment="Left" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2" Width="500" Height="40" controls:TextBoxHelper.Watermark="Bemerkungen"/>
+        <controls:SplitButton HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Width="200" ItemsSource="{Binding CategorieList}"  DisplayMemberPath="Description" VerticalAlignment="Center" ToolTip="Kategorie auswählen" SelectedIndex="0"/>
+            <TextBox HorizontalAlignment="Left" Grid.Row="1" Grid.Column="1" Width="200" Height="20" controls:TextBoxHelper.Watermark="Privatanteil"/>
 
-
-        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,0,72,0" HorizontalAlignment="Right">
-            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" Command="{Binding NewCommand}" BorderThickness="0" Margin="0,0,30,0">
-                <iconPacks:PackIconMaterial Kind="Upload" Width="30" Height="30" />
+        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,0,22,0" HorizontalAlignment="Right">
+            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" Margin="0,0,30,0" ToolTip="Beleg hinzufügen">
+                <iconPacks:PackIconMaterial Kind="Upload" Width="25" Height="25" />
             </Button>
-            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" Command="{Binding NewCommand}" BorderThickness="0">
+            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung hinzufügen">
                 <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
             </Button>
-            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" Command="{Binding NewCommand}" BorderThickness="0">
-                <iconPacks:PackIconMaterial Kind="Check" Width="30" Height="30" />
+            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen">
+                <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
             </Button>
         </StackPanel>
 
