Add Dummy Data after AddTransactionView to DB UI Optimation

--- a/tinyERP/tinyERP/Resources/Colors.xaml
+++ b/tinyERP/tinyERP/Resources/Colors.xaml
@@ -16,7 +16,8 @@
     <!--End of MetroTheme-->
     
     <Color x:Key="BorderColor">Black</Color>
-    
-    
+    <Color x:Key="PopupWindowBackgroundColor">Aliceblue</Color>
+    <Color x:Key="DataGridBackgroundColor">#E6E6E6</Color>
+
 
 </ResourceDictionary>
