--- a/tinyERP/tinyERP/Resources/Brushes.xaml
+++ b/tinyERP/tinyERP/Resources/Brushes.xaml
@@ -2,4 +2,6 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderColor}"/>
+    <SolidColorBrush x:Key="PopupWindowBrush" Color="{StaticResource PopupWindowBackgroundColor}"/>
+    <SolidColorBrush x:Key="DataGridBackgroundBrush" Color="{StaticResource DataGridBackgroundColor}"/>
 </ResourceDictionary>
