--- a/tinyERP/tinyERP/Views/AddTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/AddTransactionView.xaml
@@ -7,38 +7,50 @@
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         x:Class="tinyERP.UI.Views.AddTransactionView"
         mc:Ignorable="d"
-        Title="Neue Buchung erfassen" Height="320" Width="550" MinWidth="550" MinHeight="320">
+        Title="Neue Buchung erfassen" Height="320" Width="550" MinWidth="550" MinHeight="320" MaxHeight="320">
 
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <TextBox HorizontalAlignment="Left" Grid.Row="0" Grid.Column="0" Width="200" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung"/>
-        <TextBox HorizontalAlignment="Left" Grid.Row="1" Grid.Column="0" Width="200" Height="20" controls:TextBoxHelper.Watermark="Betrag"/>
-        <DatePicker HorizontalAlignment="Left" Grid.Row="2" Grid.Column="0" Width="200" Height="20" Text="Wähle ein Datum"/>
-        <TextBox HorizontalAlignment="Left" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2" Width="500" Height="40" controls:TextBoxHelper.Watermark="Bemerkungen"/>
-        <controls:SplitButton HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Width="200" ItemsSource="{Binding CategorieList}"  DisplayMemberPath="Name" VerticalAlignment="Center" ToolTip="Kategorie auswählen" SelectedIndex="0"/>
-            <TextBox HorizontalAlignment="Left" Grid.Row="1" Grid.Column="1" Width="200" Height="20" controls:TextBoxHelper.Watermark="Privatanteil"/>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Resources/Brushes.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,0,22,0" HorizontalAlignment="Right">
-            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" Margin="0,0,30,0" ToolTip="Beleg hinzufügen">
-                <iconPacks:PackIconMaterial Kind="Upload" Width="25" Height="25" />
-            </Button>
-            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung hinzufügen" Click="AddNewTransaction">
-                <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
-            </Button>
-            <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" Click="RemoveTransaction">
-                <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
-            </Button>
-        </StackPanel>
+    <DockPanel Background="{StaticResource PopupWindowBrush}">
+        <Grid Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-    </Grid>
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="0" Grid.Column="0" Height="20" controls:TextBoxHelper.Watermark="Bezeichnung" Margin="10"/>
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="0"  Height="20" controls:TextBoxHelper.Watermark="Betrag" Margin="10"/>
+            <DatePicker HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="0"  Height="20" Text="Wähle ein Datum" Margin="10" />
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2" controls:TextBoxHelper.Watermark="Bemerkungen" Margin="10,10,10,0"/>
+            <controls:SplitButton HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" ItemsSource="{Binding CategorieList}"  DisplayMemberPath="Name" VerticalAlignment="Center" ToolTip="Kategorie auswählen" SelectedIndex="0" Margin="10"/>
+            <TextBox HorizontalAlignment="Stretch" Grid.Row="1" Grid.Column="1" Height="20" controls:TextBoxHelper.Watermark="Privatanteil" Margin="10"/>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="0,10,10,-10" HorizontalAlignment="Right">
+                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" Margin="0,0,30,0" ToolTip="Beleg hinzufügen">
+                    <iconPacks:PackIconMaterial Kind="Upload" Width="25" Height="25" />
+                </Button>
+                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung hinzufügen" Click="AddNewTransaction">
+                    <iconPacks:PackIconMaterial Kind="PlusCircle" Width="30" Height="30" />
+                </Button>
+                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" Click="RemoveTransaction">
+                    <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
+                </Button>
+            </StackPanel>
+
+        </Grid>
+    </DockPanel>
+
 </controls:MetroWindow>
