--- a/tinyERP/tinyERP/MainWindow.xaml
+++ b/tinyERP/tinyERP/MainWindow.xaml
@@ -8,8 +8,10 @@
                       Width="1400"
                       Height="800"
                       MinHeight="800"
-                      MinWidth="1400">
-    
+                      MinWidth="1400"
+                      BorderBrush="{DynamicResource AccentColorBrush}"
+                      BorderThickness="1">
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
