Replaced RemoveTransaction by IsCancel-property
because clicking this button doesn't remove a Transaction, but just
cancels/closes the Add-dialogue

--- a/tinyERP/tinyERP/Views/AddTransactionView.xaml
+++ b/tinyERP/tinyERP/Views/AddTransactionView.xaml
@@ -47,7 +47,7 @@
                 <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung hinzufügen" Click="AddNewTransaction">
                     <iconPacks:PackIconMaterial Kind="CheckCircle" Width="30" Height="30" />
                 </Button>
-                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" Click="RemoveTransaction">
+                <Button HorizontalAlignment="Right" Style="{DynamicResource MetroCircleButtonStyle}" Width="40" Height="40" BorderThickness="0" ToolTip="Buchung verwerfen" IsCancel="True">
                     <iconPacks:PackIconMaterial Kind="CloseCircle" Width="30" Height="30" />
                 </Button>
             </StackPanel>
